compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__shadow_param.snap
---
source: compiler-core/src/erlang/tests/variables.rs
expression: "pub fn main(board) {\nfn(board) { board }\n  board\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-spec main(W) -> W.
main(Board) ->
    fun(Board@1) -> Board@1 end,
    Board.
