compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__variables__shadow_pipe.snap
---
source: compiler-core/src/erlang/tests/variables.rs
expression: "\npub fn main(x) {\n  x\n  |> fn(x) { x }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-spec main(AB) -> AB.
main(X) ->
    _pipe = X,
    (fun(X@1) -> X@1 end)(_pipe).
